# foldit-conv

./: Cargo.toml  pyproject.toml
src/: ffi.rs  lib.rs  python.rs
src/adapters/: atomworks.rs  bcif.rs  biotite.rs  dcd.rs  esmfold.rs  mod.rs  mrc.rs  pdb.rs  simplefold.rs
src/cif/: dom.rs  extract.rs  mod.rs  parse.rs
src/coords/: bcif.rs  binary.rs  gpu.rs  mod.rs  pdb.rs  python.rs  render.rs  transform.rs  types.rs  validation.rs
src/ops/: bond_inference.rs  mod.rs  transform.rs  validation.rs
src/render/: backbone.rs  gpu.rs  mod.rs  sidechain.rs
src/secondary_structure/: auto.rs  dssp.rs  mod.rs
src/types/: assembly.rs  coords.rs  density.rs  entity.rs  mod.rs
tests/: test_integration.py
