[package]
name = "foldit-conv"
version = "0.1.0"
edition = "2021"
authors = ["Andreas Petrides"]
description = "Coordinate format conversion library for protein structures"
license = "MIT"
repository = "https://github.com/petridecus/foldit-conv"

[lib]
name = "foldit_conv"
crate-type = ["rlib"]

[build-dependencies]
pyo3-build-config = "0.27"

[dependencies]
pyo3 = { version = "0.27", features = ["extension-module"], optional = true }
numpy = { version = "0.27", optional = true }
ndarray = "0.15"
pdbtbx = "0.12"
thiserror = "1.0"
glam = "0.30"
rmp = "0.8"
flate2 = "1"

[features]
default = []
python = ["dep:pyo3", "dep:numpy"]
